# markup-parse

./: .hlint.yaml  ChangeLog.md  cabal.project  markup-parse.cabal  markup-parse.org  readme.md  readme.org
.github/workflows/: haskell-ci.yml
app/: diff.hs  markupparse-diff.hs  speed.hs  speed0.hs
other/: Parsing - Wikipedia.html  RunByteStringOf-1000-MeasureTime-StatAverage.perf  RunDefault-1000-MeasureTime-StatAverage.perf  RunDefault-1000-MeasureTime-StatMedian.perf  RunDefault-1000-MeasureTime.perf  RunMarkup-10000-MeasureTime-StatAverage.perf  RunWhitespace-1000-MeasureTime-StatAverage.perf  ex.xml  line_.html
src/: MarkupParse.hs
src/Data/: Markup.hs
src/Data/Markup/: FlatParse.hs  Parse.hs
src/Data/Markup/Parse/: Html.hs
src/MarkupParse/: Common.hs  FlatParse.hs  Html.hs  Patch.hs  Xml.hs
src/MarkupParse/Internal/: FlatParse.hs
test/: doctests.hs
