cabal-version: 3.0
name:          markup-parse
version:       0.0.0.1
synopsis: See readme
description: See readme for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Copywrite, Tony Day, 2023-
license: BSD-3-Clause
homepage: https://github.com/tonyday567/markup-parse#readme
bug-reports: https://github.com/tonyday567/markup-parse/issues
build-type: Simple
tested-with: GHC == 9.6.2
source-repository head
  type: git
  location: https://github.com/tonyday567/markup-parse

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.7 && <5
    , bytestring >=0.11.3 && <0.13
    , flatparse >=0.3.5 && <0.6
    , text               >=1.2 && <2.1
    , tree-diff          >=0.3 && <0.4
    , numhask-space      >=0.10 && <0.12
    , optics-core        >=0.4 && <0.5
    , string-interpolate >=0.3 && <0.4
    , formatn            >=0.2.1 && <0.4
    , containers         >=0.6 && <0.7
  exposed-modules:
    MarkupParse
    MarkupParse.Common
    MarkupParse.Html
    MarkupParse.Xml
