cabal-version: 3.0
name:          markup-parse
version:       0.0.0.1
synopsis: A markup parser.
description: A markup parser and printer, from and to strict bytestrings, optimised for speed.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Copywrite, Tony Day, 2023-
license: BSD-3-Clause
homepage: https://github.com/tonyday567/markup-parse#readme
bug-reports: https://github.com/tonyday567/markup-parse/issues
build-type: Simple
tested-with: GHC == 9.6.2
source-repository head
  type: git
  location: https://github.com/tonyday567/markup-parse

common ghc2021-stanza
  if impl(ghc >=9.2)
    default-language:
      GHC2021
  if impl(ghc <9.2)
    default-language:
      Haskell2010
    default-extensions:
      BangPatterns
      BinaryLiterals
      ConstrainedClassMethods
      ConstraintKinds
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DoAndIfThenElse
      EmptyCase
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      ExplicitForAll
      FlexibleContexts
      FlexibleInstances
      ForeignFunctionInterface
      GADTSyntax
      GeneralisedNewtypeDeriving
      HexFloatLiterals
      ImplicitPrelude
      InstanceSigs
      KindSignatures
      MonomorphismRestriction
      MultiParamTypeClasses
      NamedFieldPuns
      NamedWildCards
      NumericUnderscores
      PatternGuards
      PolyKinds
      PostfixOperators
      RankNTypes
      RelaxedPolyRec
      ScopedTypeVariables
      StandaloneDeriving
      StarIsType
      TraditionalRecordSyntax
      TupleSections
      TypeApplications
      TypeOperators
      TypeSynonymInstances
  if impl(ghc <9.2) && impl(ghc >=8.10)
    default-extensions:
      ImportQualifiedPost
      StandaloneKindSignatures

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.7 && <5
    , bytestring >=0.11.3 && <0.13
    , flatparse >=0.3.5 && <0.6
    , deepseq              >=1.4.4 && <1.5
    , text               >=1.2 && <2.1
    , tree-diff          >=0.3 && <0.4
    , numhask-space      >=0.10 && <0.12
    , optics-core        >=0.4 && <0.5
        , tasty        >=1.2 && <1.5
        , tasty-golden >=2.3.1.1 && <2.4
        , tree-diff    >=0.3 && <0.4
    , string-interpolate >=0.3 && <0.4
    , formatn            >=0.2.1 && <0.4
    , containers         >=0.6 && <0.7
    , these
  exposed-modules:
    MarkupParse
    MarkupParse.FlatParse
    MarkupParse.Patch

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded

benchmark markup-parse-speed
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: speed.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , containers           >=0.6 && <0.7
        , deepseq              >=1.4.4 && <1.5
        , formatn              >=0.2.1 && <0.4
        , mtl                  >=2.2.2 && <2.4
        , html-parse
        , optparse-applicative >=0.17 && <0.19
        , perf
        , text                 >=1.2 && <2.1
        , markup-parse
        , bytestring
        , flatparse
    ghc-options: -O2
    type: exitcode-stdio-1.0

test-suite markup-parse-diff
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: diff.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , containers           >=0.6 && <0.7
        , mtl                  >=2.2.2 && <2.4
        , optparse-applicative >=0.17 && <0.19
        , text                 >=1.2 && <2.1
        , bytestring   >=0.11.3 && <0.13
        , flatparse    >=0.3.5 && <0.6
        , tasty        >=1.2 && <1.5
        , tasty-golden >=2.3.1.1 && <2.4
        , tree-diff    >=0.3 && <0.4
        , markup-parse
        , string-interpolate
    type: exitcode-stdio-1.0
