cabal-version: 3.0
name: markup-parse
version: 0.2.1.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Copyright, Tony Day, 2023-
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/markup-parse#readme
bug-reports: https://github.com/tonyday567/markup-parse/issues
synopsis: A markup parser.
description:
  A markup parser and printer, from and to strict bytestrings, optimised for speed.

build-type: Simple
tested-with:
  ghc ==9.6.7
  ghc ==9.8.4
  ghc ==9.10.2
  ghc ==9.12.2

extra-doc-files:
  ChangeLog.md
  other/*.html
  other/*.svg
  readme.md

source-repository head
  type: git
  location: https://github.com/tonyday567/markup-parse

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

common ghc2024-additions
  default-extensions:
    DataKinds
    DerivingStrategies
    DisambiguateRecordFields
    ExplicitNamespaces
    GADTs
    LambdaCase
    MonoLocalBinds
    RoleAnnotations

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: ghc2024-additions
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: ghc2024-stanza
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.11.3 && <0.13,
    containers >=0.6 && <0.9,
    deepseq >=1.4 && <1.6,
    flatparse >=0.3.5 && <0.6,
    string-interpolate >=0.3 && <0.4,
    these >=1.1 && <1.3,

  exposed-modules:
    MarkupParse
    MarkupParse.Internal.FlatParse

test-suite doctests
  import: ghc2024-stanza
  main-is: doctests.hs
  hs-source-dirs: test
  build-depends:
    base >=4.14 && <5,
    doctest-parallel >=0.3 && <0.5,

  ghc-options: -threaded
  type: exitcode-stdio-1.0

test-suite markup-parse-diff
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  import: ghc2024-stanza
  main-is: markup-parse-diff.hs
  hs-source-dirs: app
  build-depends:
    Diff >=1.0 && <1.1,
    base >=4.14 && <5,
    bytestring >=0.11.3 && <0.13,
    markup-parse,
    tasty >=1.2 && <1.6,
    tasty-golden >=2.3.1.1 && <2.4,

  type: exitcode-stdio-1.0
